--- a/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
@@ -5,7 +5,5 @@
         [component]="cellComponent"
         [calendar]="calendar"
         [expenses]="expenses"
-        [balances]="balances"
-        [rowResizedEvent]="resizedEvent"
-        (resized)="resizedEvent = $event">
+        [balances]="balances">
 </app-calendar-grid-row>
