--- a/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
@@ -15,20 +15,20 @@
             <input type="file" #avatarUpload (change)="onAvatarSelected($event)" accept="image/jpeg" class="d-none" />
             <h6 class="my-1 text-hint">Profile</h6>
             <div class="mb-3">
-                <input nbInput maxlength="255" name="name" placeholder="User name" [(ngModel)]="user.name" required />
+                <input nbInput fullWidth maxlength="255" name="name" placeholder="Name" [(ngModel)]="user.name" required />
             </div>
             <div class="mb-3">
-                <input nbInput disabled maxlength="255" type="email" name="email" placeholder="Email address" [(ngModel)]="user.email" />
+                <input nbInput fullWidth disabled maxlength="255" type="email" name="email" placeholder="Email address" [(ngModel)]="user.email" />
             </div>
             <h6 class="my-1 text-hint">Password</h6>
             <div class="mb-3">
-                <input nbInput type="password" maxlength="255" id="current-password" placeholder="Current password" />
+                <input nbInput fullWidth type="password" maxlength="255" id="current-password" placeholder="Current password" />
             </div>
             <div class="mb-3">
-                <input nbInput type="password" minlength="8" maxlength="255" id="new-password-1" placeholder="New password" />
+                <input nbInput fullWidth type="password" minlength="8" maxlength="255" id="new-password-1" placeholder="New password" />
             </div>
             <div class="mb-0">
-                <input nbInput type="password" minlength="8" maxlength="255" id="new-password-2" placeholder="Confirm new password" />
+                <input nbInput fullWidth type="password" minlength="8" maxlength="255" id="new-password-2" placeholder="Confirm new password" />
             </div>
         </nb-card-body>
         <nb-card-footer class="text-right">
