--- a/frontend/src/app/modules/main/sidebar/profile/profile.component.html
+++ b/frontend/src/app/modules/main/sidebar/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-between">
+<div class="d-flex align-items-center justify-content-between p-3">
     <nb-user [name]="user.name"
              [picture]="user.avatar"
              [title]="user.email">
