--- a/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
@@ -1,6 +1,8 @@
 <app-calendar-grid-row
         *ngFor="let row of data"
         [row]="row"
+        (select)="selectedValue = $event;"
+        [selectedValue]="selectedValue"
         [visibleDate]="visibleDate"
         [component]="cellComponent"
         [calendar]="calendar"
