--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,7 @@
 @use 'theme' as *;
 @use '@nebular/theme/styles/globals' as *;
 
+@use 'styles/style';
 @use 'styles/animation';
 @use 'styles/helpers';
 @use 'styles/layout';
