--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
@@ -1,4 +1,4 @@
-<form #categoryForm="ngForm" (submit)="save.emit(this.category)" class="dialog-responsive" autocomplete="off">
+<form #categoryForm="ngForm" (submit)="save.emit(this.category)" autocomplete="off">
     <nb-card class="dialog">
         <nb-card-header i18n>
             <button nbButton status="primary" ghost (click)="back.emit(true)">
