--- a/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
@@ -10,7 +10,7 @@
                 <div class="d-flex">
                     <div class="mx-3 w-50">
                         <label for="expense-amount">Amount</label>
-                        <input nbInput fullWidth required type="number"
+                        <input #focus nbInput fullWidth required type="number" tabIndex="1"
                                placeholder="0.00" name="amount" id="expense-amount"
                                [(ngModel)]="expense.absoluteAmount"
                                class="t-input px-0 pt-3 pb-2" />
@@ -23,7 +23,7 @@
                             [suggestion]="expenseSuggestionResponse?.label"
                             (suggest)="applyLabelSuggestion()"
                             [cssClasses]="'t-input px-0 pt-3 pb-2'">
-                            <input nbInput fullWidth required
+                            <input nbInput fullWidth required tabIndex="2"
                                    placeholder="e.g. coffee" name="label" id="expense-label"
                                    [(ngModel)]="expense.label"
                                    class="t-input px-0 pt-3 pb-2" />
@@ -35,43 +35,40 @@
         <nb-card-body class="p-0">
             <nb-list>
                 <nb-list-item (click)="selectCalendar()" class="actionable">
-                    <nb-icon icon="calendar-outline"></nb-icon>
+                    <nb-icon icon="calendar-outline" class="me-3"></nb-icon>
                     <div class="text-truncate">{{ expense.calendar.name }}</div>
                 </nb-list-item>
 
                 <nb-list-item (click)="expense.confirmed = !expense.confirmed" class="actionable">
-                    <nb-icon [icon]="expense.confirmed ? 'checkmark-circle-2' : 'radio-button-off'" [status]="expense.confirmed ? 'primary' : ''" [class.active]="expense.confirmed"></nb-icon>
+                    <nb-icon [icon]="expense.confirmed ? 'checkmark-circle-2' : 'radio-button-off'" [status]="expense.confirmed ? 'primary' : ''" [class.active]="expense.confirmed" class="me-3"></nb-icon>
                     <div>{{ expense.confirmed ? 'Confirmed' : 'Unconfirmed' }}</div>
                 </nb-list-item>
 
                 <nb-list-item (click)="selectCategory()" class="actionable">
-                    <nb-icon icon="radio-button-on" [ngStyle]="{'color': expense.category?.color}" class="active"></nb-icon>
+                    <nb-icon icon="radio-button-on" [ngStyle]="{'color': expense.category?.color}" class="active me-3"></nb-icon>
                     <div class="text-truncate">{{ expense.category?.name ?? 'Uncategorized' }}</div>
                 </nb-list-item>
 
                 <nb-list-item (click)="selectDateTime()" class="actionable">
-                    <nb-icon icon="calendar-outline"></nb-icon>
+                    <nb-icon icon="calendar-outline" class="me-3"></nb-icon>
                     <div class="text-truncate">{{ expense.createdAt | date:'fullDate' }}</div>
                 </nb-list-item>
 
                 <nb-list-item (click)="addDescription()" class="actionable">
-                    <nb-icon icon="file-text-outline"></nb-icon>
+                    <nb-icon icon="file-text-outline" class="me-3"></nb-icon>
                     <div class="text-truncate">{{ expense.description ?? 'Add description' }}</div>
                 </nb-list-item>
 
                 <nb-list-item>
-                    <nb-icon icon="person-outline"></nb-icon>
-                    <nb-user [name]="expense.user.name"
-                             [picture]="expense.user.avatar"
-                             size="small">
-                    </nb-user>
+                    <nb-user [picture]="expense.user.avatar" onlyPicture size="tiny" class="me-2"></nb-user>
+                    <div class="text-truncate">{{ expense.user.name }}</div>
                 </nb-list-item>
             </nb-list>
         </nb-card-body>
 
         <nb-card-footer>
             <div class="d-flex flex-row-reverse justify-content-between">
-                <button nbButton type="submit" status="primary" [disabled]="isBusy || !expenseForm.valid">
+                <button nbButton type="submit" status="primary" [disabled]="isBusy || !expenseForm.valid" tabIndex="3">
                     <nb-icon icon="save-outline"></nb-icon>
                     Save
                 </button>
