--- a/frontend/src/styles/helpers.scss
+++ b/frontend/src/styles/helpers.scss
@@ -1,42 +1,20 @@
 @use '@nebular/theme/styles/globals' as *;
 
-//.h-100 {
-//  height: 100% !important;
-//}
-//
-//.w-100 {
-//  width: 100% !important;
-//}
-
-.max-h-100 {
-  max-height: 100% !important;
-}
-
 .text-right {
-  text-align: right;
+    text-align: right;
 }
 
 .text-left {
-  text-align: left;
+    text-align: left;
 }
 
-.text-truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.text-uppercase {
-  text-transform: uppercase;
-}
-
-a,
-a:hover,
-a:active,
-a:focus {
-  text-decoration: none !important;
-}
-
-.clearfix {
-  clear: both;
-}
+//
+//.text-truncate {
+//  white-space: nowrap;
+//  overflow: hidden;
+//  text-overflow: ellipsis;
+//}
+//
+//.clearfix {
+//  clear: both;
+//}
