--- a/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
@@ -1,7 +1,7 @@
 <app-calendar-grid-row
         *ngFor="let row of data"
         [row]="row"
-        (select)="selectedValue = $event;"
+        (select)="onSelect($event)"
         [selectedValue]="selectedValue"
         [visibleDate]="visibleDate"
         [component]="cellComponent"
