--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-desktop/calendar-grid-row-cell-desktop.component.scss
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-desktop/calendar-grid-row-cell-desktop.component.scss
@@ -28,7 +28,7 @@
     font-weight: nb-theme(text-heading-6-font-weight);
 }
 
-.add-button {
+.create-expense {
   display: none;
   position: absolute;
   border: 3px solid nb-theme(background-basic-color-1) !important;
@@ -38,7 +38,7 @@
 }
 
 :host:hover {
-    .add-button {
+    .create-expense {
         display: block;
     }
 
