--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <nb-card class="dialog" size="large">
     <nb-card-header>
-        <button nbButton status="primary" ghost (click)="back.emit(true)">
+        <button nbButton status="primary" ghost (click)="back.emit()">
             <nb-icon icon="arrow-back-outline"></nb-icon>
         </button>
         Select category
