--- a/frontend/src/styles/layout.scss
+++ b/frontend/src/styles/layout.scss
@@ -4,24 +4,9 @@ nb-sidebar > .main-container > .scrollable {
   padding: 0 !important;
 }
 
-@include media-breakpoint-only(xs) {
-  nb-sidebar.expanded {
-    width: 100% !important;
-
-    .main-container {
-      width: 100% !important;
-    }
-  }
-}
-
-@include media-breakpoint-up(sm) {
-  nb-sidebar.compacted,
-  nb-sidebar.expanded {
-    width: 24rem !important;
-
-    .main-container {
-      width: 24rem !important;
-    }
+@include media-breakpoint-down(md) {
+  .dialog {
+      //margin-bottom: 30vh !important;
   }
 }
 
